[gd_scene load_steps=6 format=1]

[ext_resource path="res://Elementoj/Nigrtruo.gd" type="Script" id=1]
[ext_resource path="res://Elementoj/nigrtruo.png" type="Texture" id=2]
[ext_resource path="res://Elementoj/nigrtruo_cirklo.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 91.4286

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 731.429

[node name="Nigrtruo" type="Area2D"]

transform/scale = Vector2( 0.7, 0.7 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 2
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Aspekto" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="Aspekto_cirklo" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="Rotacii" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = true
playback/speed = 1.0

[node name="Sono" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sono"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="." to="." method="_on_Nigrtruo_body_enter"]

[connection signal="body_enter" from="Sono" to="." method="_on_Sono_body_enter"]


